force-app/main/default/objects/Campaign_Email_List__mdt/Campaign_Email_List__mdt.object-meta.xml
<CustomObject>
    <label>Campaign Email List</label>
    <pluralLabel>Campaign Email Lists</pluralLabel>
</CustomObject>