force-app/main/default/objects/Campaign_Email_List__mdt/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <label>CampaignId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>