force-app/main/default/objects/Campaign_Email_List__mdt/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>ContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>