force-app/main/default/objects/Campaign_Email_List__mdt/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <label>Cron Expression</label>
    <length>50</length>
    <type>Text</type>
</CustomField>