force-app/main/default/objects/Campaign_Email_List__mdt/fields/Job_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Job_Run_Time__c</fullName>
    <label>Job Run Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>