force-app/main/default/objects/Campaign_Email_List__mdt/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <label>LeadId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>