force-app/main/default/objects/Campaign_Email_List__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>