force-app/main/default/objects/Campaign_Email_List__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Query__c</columns>
    <columns>CampaignId__c</columns>
    <columns>LeadId__c</columns>
    <columns>ContactId__c</columns>
    <columns>Cron_Expression__c</columns>
    <columns>Job_Run_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>